# vm-filesystem

./: CMakeLists.txt  Makefile  README.md  script.py
include/: common.h  minicrt.h
src/: drives.cc  ls.cc  mkdir.cc  move.cc  remove.cc
